[project]
name = "rgb_ln_telegram_bot"
version = "0.1.0"
description = "Telegram bot to test RGB payments on the Lightning Network"
authors = [{name = "Zoe Faltibà", email = "<zoefaltiba@gmail.com>"}]
keywords = ["RGB", "bitcoin", "Lightning Network"]
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Other/Nonlisted Topic",
]
requires-python = "~=3.10"
dependencies = [
    "python-telegram-bot[job-queue] (~=20.5)",
    "requests~=2.31.0",
    "rgb-lib==0.3.0b1",
    "sqlalchemy~=2.0.21",
]

[project.scripts]
bot = "rgb_ln_telegram_bot.main:main"

[tool.poetry.group.dev.dependencies]
black = "^25.1"
flake8 = "^7.0"
isort = "^6.0"
pip-audit = "^2.9.0"
pylint = "^3.3"
vulture = "^2.14"

[build-system]
requires = ["poetry-core~=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 100
target_version = ["py310", "py311", "py312", "py313"]

[tool.vulture]
min_confidence = 100
